Fixed bug with negated "some"-condition, found in #75
Conflicts:
	CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 1.3.0
+- Fixed bug with negating "some"-consitions
 - support generic relations (erthalion)
 - support filtering by time equality
 - optimizations for python 3
